<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">站点锁浏览器</string>
    <string name="hint_url">输入网址，该域名将作为「本网站」</string>
    <string name="go">前往</string>
    <string name="home_label">本网站：</string>
    <string name="home_none">（未设定）</string>
    <string name="toggle_redirects">跳转屏蔽</string>
    <string name="toggle_redirects_short">跳转</string>
    <string name="toggle_ads">广告屏蔽</string>
    <string name="toggle_ads_short">广告</string>
    <string name="toggle_desktop">桌面模式</string>
    <string name="toggle_desktop_short">桌面</string>
    <string name="status_ready">就绪</string>
    <string name="loading">加载中…</string>
    <string name="invalid_url">无效地址</string>
    <string name="back">后退</string>
    <string name="forward">前进</string>
    <string name="reload">刷新</string>
    <string name="home">首页</string>
    <string name="redirect_blocked_prefix">已屏蔽跳转：</string>
    <string name="ad_blocked_prefix">已屏蔽广告：</string>
    <string name="counts_reset">计数已重置</string>
    <string name="redirects_on">已开启跳转屏蔽</string>
    <string name="redirects_off">已关闭跳转屏蔽</string>
    <string name="ads_on">已开启广告屏蔽</string>
    <string name="ads_off">已关闭广告屏蔽</string>
</resources>
